Add convention plugins (#84)